--- a/etc/nginx2.conf
+++ b/etc/nginx2.conf
@@ -1,7 +1,7 @@
 user www www;
 error_log /var/log/nginx.error_log info;
 http {
-
+    include conf/mime.types;
     default_type application/octet-stream;
     log_format simple '$remote_addr $request $status';
     server {
