--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,18 +1,29 @@
-user www www;
+user www-data www-data;
 error_log /var/log/nginx.error_log info;
 http {
 
     default_type application/octet-stream;
     log_format simple '$remote_addr $request $status';
+
     server {
-        listen one.example.com;
-        server_name one.example.com www.one.example.com;
-        access_log /var/log/nginx.access_log simple;
-        location / {
-            root /www/one.example.com;
+        listen;
+        #server_name one.example.com www.one.example.com;
+        #access_log /var/log/nginx.access_log simple;
+
+        location /uploads/ {
+            alias /home/box/web/uploads/;
         }
+        location ~* ^.+\.* $ {
+            root /home/box/web/public;
+        }
+
+        location ~* ^.+\$ {
+            root s;
+        }
+
+
         location ~* ^.+\.(jpg|jpeg|gif)$ {
-            root /www/images;
+            root /home/box/web/publics;
             access_log off;
             expires 30d;
         }
