--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,6 @@
 user www-data www-data;
 error_log /var/log/nginx.error_log info;
+error_log /home/box/test.error.log;
 http {
 
     default_type application/octet-stream;
