--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,32 +1,30 @@
 user www-data www-data;
 error_log /var/log/nginx.error_log info;
-error_log /home/box/test.error.log;
+
 http {
 
     default_type application/octet-stream;
     log_format simple '$remote_addr $request $status';
 
     server {
-        listen;
-        #server_name one.example.com www.one.example.com;
-        #access_log /var/log/nginx.access_log simple;
+        listen 80 default; # этот конфиг - умолчательный для 80 порта
+        server_name _;  # хитрый ключик, обозначающий, что этот конфиг применим для любого сайта
+
+        # server_name one.example.com www.one.example.com;
+        # access_log /var/log/nginx.access_log simple;
+        error_log  /home/box/web/error.log error;
+
+        location / {
+            root /home/box/web;
+        }
+
 
         location /uploads/ {
             alias /home/box/web/uploads/;
         }
-        location ~* ^.+\.* $ {
+        location ~ \.*  {
             root /home/box/web/public;
         }
 
-        location ~* ^.+\$ {
-            root s;
-        }
-
-
-        location ~* ^.+\.(jpg|jpeg|gif)$ {
-            root /home/box/web/publics;
-            access_log off;
-            expires 30d;
-        }
     }
 }
