--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -15,15 +15,21 @@ http {
         error_log  /home/box/web/error.log error;
 
         location / {
-            root /home/box/web;
+          root /home/box/web;
         }
-
-
-        location /uploads/ {
-            alias /home/box/web/uploads/;
-        }
-        location ~ \.*  {
+        location * \.[a-zA-Z]+$ {
             root /home/box/web/public;
+        }
+        location ^~ /uploads/ {
+             root /home/box/web;
+        }
+
+        location ~* ^.+\..+$ {
+            root /home/box/web/public;
+        }
+
+        location ~* ^[^.]+$ {
+            return 404;
         }
 
     }
