--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -7,12 +7,11 @@ http {
     log_format simple '$remote_addr $request $status';
 
     server {
-        listen 80 default; # этот конфиг - умолчательный для 80 порта
-        server_name _;  # хитрый ключик, обозначающий, что этот конфиг применим для любого сайта
+        listen 80 default;
+        server_name _;
 
-        # server_name one.example.com www.one.example.com;
-        # access_log /var/log/nginx.access_log simple;
-        error_log  /home/box/web/error.log error;
+        access_log /home/box/web/nginx.access_log simple;
+        error_log  /home/box/web/nginx.error.log error;
 
         location / {
           root /home/box/web;
