--- a/etc/gunicor.conf
+++ b/etc/gunicor.conf
@@ -1,10 +1,10 @@
 CONFIG = {
     'mode': 'wsgi',
     'working_dir': '/home/box/web',
-    'python': '/usr/bin/python3',
+    'python': '/usr/bin/python',
     'args': (
         '--bind=0.0.0.0:8080',
-        '--workers=9',
+        '--workers=16',
         '--timeout=60',
         '--log-file=/home/box/web/error_logs.log',
         'hello:wsgi_app',
