--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,35 +1,25 @@
-user www-data www-data;
-error_log /var/log/nginx.error_log info;
+server {
+    listen 80 default_server;
+    server_name localhost;
+    root /home/box/web;
 
-http {
-
-    default_type application/octet-stream;
-    log_format simple '$remote_addr $request $status';
-
-    server {
-        listen 80 default;
-        server_name _;
-
-        access_log /home/box/web/nginx.access_log simple;
-        error_log  /home/box/web/nginx.error.log error;
-
-        location / {
-          root /home/box/web;
-        }
-        location * \.[a-zA-Z]+$ {
-            root /home/box/web/public;
-        }
-        location ^~ /uploads/ {
-             root /home/box/web;
-        }
-
-        location ~* ^.+\..+$ {
-            root /home/box/web/public;
-        }
-
-        location ~* ^[^.]+$ {
-            return 404;
-        }
-
+    location ~ /hello/ {
+        proxy_pass http://0.0.0.0:8080;
+        include proxy_params;
     }
+
+
+    location ~ /uploads/ {
+        root /home/box/web;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        root /home/box/web/public;
+    }
+
+    location / {
+        try_files $uri $uri/ = 404;
+    }
+
+    error_log /home/box/test.error.log;
 }
