--- a/etc/django.conf
+++ b/etc/django.conf
@@ -3,7 +3,7 @@ CONFIG = {
     'environment': {
             'PYTHONPATH': '/path/to/custom/python/packages',
      },
-     'working_dir': '/',
+     'working_dir': '/home/box/web/',
      'user': 'www-data',
      'group': 'www-data',
      'args': (
