--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,23 +1,17 @@
 server {
     listen 80 default_server;
-    server_name localhost;
-    root /home/box/web;
 
-    location ~ /hello/ {
-        proxy_pass http://0.0.0.0:8080;
-        include proxy_params;
-    }
-
-    location ~ /uploads/ {
+    location ^~ /uploads/ {
         root /home/box/web;
     }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    location ~* .+\..+ {
         root /home/box/web/public;
     }
-
-    location / {
-        try_files $uri $uri/ = 404;
+    location ^~ /hello/ {
+        proxy_pass http://0.0.0.0:8080;
+    }
+    location ^~ / {
+        proxy_pass http://0.0.0.0:8000;
     }
 
     error_log /home/box/test.error.log;
