--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,18 +1,33 @@
+upstream gunicorn {
+   server 0.0.0.0:8080;
+}
+
+upstream django {
+  server 0.0.0.0:8000;
+}
+
 server {
-    listen 80 default_server;
+  listen 80 default_server;
+  server_name localhost;
+  root /home/box/web;
 
-    location ^~ /uploads/ {
-        root /home/box/web;
-    }
-    location ~* .+\..+ {
-        root /home/box/web/public;
-    }
-    location ^~ /hello/ {
-        proxy_pass http://0.0.0.0:8080;
-    }
-    location ^~ / {
-        proxy_pass http://0.0.0.0:8000;
-    }
+  location ~ / {
+    proxy_pass http://0.0.0.0:8000;
+    include proxy_params;
+  }
 
-    error_log /home/box/test.error.log;
+  location ~ /hello/ {
+    proxy_pass http://0.0.0.0:8080;
+    include proxy_params;
+  }
+
+  location ~ /uploads/ {
+    root /home/box/web;
+  }
+
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    root /home/box/web/public;
+  }
+
+  error_log /home/box/web/nginx.error.log;
 }
