update unicorn setings

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,21 +1,21 @@
-upstream gunicorn {
-   server 0.0.0.0:8080;
-}
+#upstream gunicorn {
+#   server 0.0.0.0:8080;
+#}
 
-upstream django {
-  server 0.0.0.0:8000;
-}
+#upstream django {
+#  server 0.0.0.0:8000;
+#}
 
 server {
-  listen 8000 default_server;
+  listen 80 default_server;
   server_name localhost;
   root /home/box/web;
-
-  location ~ / {
+# gunicorn ask
+  location ^~ /{
     proxy_pass http://0.0.0.0:8000;
     include proxy_params;
   }
-
+# gunicorn hello
   location ~ /hello/ {
     proxy_pass http://0.0.0.0:8080;
     include proxy_params;
