--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,10 +1,10 @@
-#upstream gunicorn {
-#   server 0.0.0.0:8080;
-#}
+upstream gunicorn {
+   server 0.0.0.0:8080;
+}
 
-#upstream django {
-#  server 0.0.0.0:8000;
-#}
+upstream django {
+  server 0.0.0.0:80;
+}
 
 server {
   listen 80 default_server;
