--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,33 +1,81 @@
-#upstream gunicorn {
-#   server 0.0.0.0:8080;
-#}
+    server {
+        listen 80;
+        access_log  /var/log/nginx/example.log;
 
-#upstream django {
-#  server 0.0.0.0:8000;
-#}
+        location / {
+            return 404;
+        }
 
-server {
-  listen 80 default_server;
-  server_name localhost;
-  root /home/box/web;
-# gunicorn ask
-  location ^~ /{
-    proxy_pass http://0.0.0.0:8000;
-    include proxy_params;
-  }
-# gunicorn hello
-  location ~ /hello/ {
-    proxy_pass http://0.0.0.0:8080;
-    include proxy_params;
-  }
+        location ^~ /uploads/ {
+            alias /home/box/web/uploads/;
+        }
 
-  location ~ /uploads/ {
-    root /home/box/web;
-  }
+        location ~* \.\w+$ {
+            root /home/box/web/public;
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-    root /home/box/web/public;
-  }
+        }
 
-  error_log /home/box/web/nginx.error.log;
-}
+        location = / {
+
+
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /login/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /signup/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /question/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /ask/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /popular/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /new/ {
+
+        proxy_pass http://0.0.0.0:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+
+
+        location /hello/ {
+        proxy_pass http://0.0.0.0:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+
+
+    }
+
+
