--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,81 +1,34 @@
-    server {
-        listen 80;
-        access_log  /var/log/nginx/example.log;
+server {
+	listen 80;
+	listen [::]:80;
+	server_name _;
+        
 
-        location / {
-            return 404;
-        }
+       location ^~ /{
+		proxy_pass         http://127.0.0.1:8000;
+		proxy_set_header   Host $host;
+		proxy_set_header   X-Real-IP $remote_addr;
+		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Host $server_name;
+	}
 
-        location ^~ /uploads/ {
-            alias /home/box/web/uploads/;
-        }
-
-        location ~* \.\w+$ {
-            root /home/box/web/public;
-
-        }
-
-        location = / {
-
-
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /login/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /signup/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /question/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /ask/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /popular/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /new/ {
-
-        proxy_pass http://0.0.0.0:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       location ^~ /hello/ {
+                proxy_pass         http://127.0.0.1:8080;
+                proxy_set_header   Host $host;
+                proxy_set_header   X-Real-IP $remote_addr;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Host $server_name;
         }
 
 
-
-        location /hello/ {
-        proxy_pass http://0.0.0.0:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       location ^~ /uploads/ {
+          location ~* [^.]\w+$ {
+            root /home/box/web;
+          }
+          return 404;
         }
 
-
-
-    }
-
-
+        location ~ \.\w+$ {
+          root  /home/box/web/public;
+	}
+}
