--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,34 +1,18 @@
 server {
-	listen 80;
-	listen [::]:80;
-	server_name _;
-        
+	listen 80 default_server;
+	
+	server_name localhost;
 
-       location ^~ /{
-		proxy_pass         http://127.0.0.1:8000;
-		proxy_set_header   Host $host;
-		proxy_set_header   X-Real-IP $remote_addr;
-		proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header   X-Forwarded-Host $server_name;
+	location ^~ /uploads/ {
+		alias /home/box/web/uploads/;
 	}
-
-       location ^~ /hello/ {
-                proxy_pass         http://127.0.0.1:8080;
-                proxy_set_header   Host $host;
-                proxy_set_header   X-Real-IP $remote_addr;
-                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-
-       location ^~ /uploads/ {
-          location ~* [^.]\w+$ {
-            root /home/box/web;
-          }
-          return 404;
-        }
-
-        location ~ \.\w+$ {
-          root  /home/box/web/public;
+	location ^~ /hello/ {
+		proxy_pass http://0.0.0.0:8080;
+	}
+	location ~* .*\..* {
+		root /home/box/web/public;
+	}
+	location ~* .* {
+		proxy_pass http://0.0.0.0:8000;
 	}
 }
